v1.5.7. Fixed vertical scrollbar on segmentation entries; Fixed firefox overlay tabs on each other

--- a/browser-action/popup.css
+++ b/browser-action/popup.css
@@ -9,6 +9,7 @@ body {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
+	background-color: white;
 }
 
 #tabs {
@@ -59,6 +60,7 @@ body {
 .tab-content {
 	margin: 10px;
 	text-align: center;
+	background-color: white;
 }
 
 .jscolor {
